bk_ida/gccida/c3/dump_regclass
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_regclass/src/regclass.c:1413:80: error: use of undeclared identifier 'costs_0'
fprintf( dump, " %s:%i", dump_regclass_reg_class_names[classa], ( unsigned int)costs_0[i].cost[classa]); 
                                                                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_regclass/src/regclass.c:1413:26: error: use of undeclared identifier 'dump_regclass_reg_class_names'
fprintf( dump, " %s:%i", dump_regclass_reg_class_names[classa], ( unsigned int)costs_0[i].cost[classa]); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_regclass/src/regclass.c:1415:44: error: use of undeclared identifier 'costs_0'
fprintf( dump, " MEM:%i\n", ( unsigned int)costs_0[i].mem_cost); 
                                           ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/dump_regclass/src/obj/regclass.o] Error 1
